--- a/parser-test/mainwindow.ui
+++ b/parser-test/mainwindow.ui
@@ -847,38 +847,20 @@
        <number>10</number>
       </property>
       <item>
-       <widget class="QPushButton" name="pushButton">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
         </property>
-        <property name="minimumSize">
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
          <size>
-          <width>70</width>
-          <height>70</height>
+          <width>20</width>
+          <height>20</height>
          </size>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>70</width>
-          <height>70</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>fuck</string>
-        </property>
-        <property name="autoDefault">
-         <bool>false</bool>
-        </property>
-        <property name="default">
-         <bool>false</bool>
-        </property>
-        <property name="flat">
-         <bool>true</bool>
-        </property>
-       </widget>
+       </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="Library">
@@ -988,7 +970,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>500</height>
+          <height>12000</height>
          </size>
         </property>
        </spacer>
@@ -1005,7 +987,7 @@
       </property>
       <property name="minimumSize">
        <size>
-        <width>0</width>
+        <width>400</width>
         <height>0</height>
        </size>
       </property>
@@ -1080,6 +1062,40 @@ border-style: groove none none groove;
       </property>
      </widget>
     </item>
+    <item row="0" column="0">
+     <widget class="QPushButton" name="pushButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>20</width>
+        <height>20</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>70</width>
+        <height>70</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>fuck</string>
+      </property>
+      <property name="autoDefault">
+       <bool>false</bool>
+      </property>
+      <property name="default">
+       <bool>false</bool>
+      </property>
+      <property name="flat">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
@@ -1088,7 +1104,6 @@ border-style: groove none none groove;
   <tabstop>exit_button</tabstop>
   <tabstop>full_size_button</tabstop>
   <tabstop>min_button</tabstop>
-  <tabstop>pushButton</tabstop>
   <tabstop>Library</tabstop>
   <tabstop>Settings</tabstop>
   <tabstop>Synchronization</tabstop>
