--- a/parser-test/mainwindow.ui
+++ b/parser-test/mainwindow.ui
@@ -92,7 +92,7 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <widget class="QWidget" name="centralWidget">
+  <widget class="QWidget" name="MainWidget">
    <property name="sizePolicy">
     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
      <horstretch>0</horstretch>
@@ -102,7 +102,7 @@
    <property name="styleSheet">
     <string notr="true">QWidget {background-color rgb(255, 170, 0)}</string>
    </property>
-   <layout class="QFormLayout" name="formLayout_2">
+   <layout class="QFormLayout" name="MainLayout">
     <property name="sizeConstraint">
      <enum>QLayout::SetNoConstraint</enum>
     </property>
@@ -119,10 +119,10 @@
      <number>10</number>
     </property>
     <property name="rightMargin">
-     <number>0</number>
+     <number>2</number>
     </property>
     <property name="bottomMargin">
-     <number>0</number>
+     <number>2</number>
     </property>
     <item row="0" column="1">
      <layout class="QHBoxLayout" name="TopButtons">
