--- a/parser-test/mainwindow.ui
+++ b/parser-test/mainwindow.ui
@@ -100,7 +100,7 @@
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {background-color rgb(255, 170, 0)}</string>
+    <string notr="true">#MainWidget {background-color:rgb(162, 0, 70);}</string>
    </property>
    <layout class="QFormLayout" name="MainLayout">
     <property name="sizeConstraint">
@@ -344,7 +344,7 @@
 
 #min_button:hover 
 {
-	background-color:rgb(124, 177, 255);
+	background-color:rgb(150, 0, 65);
 }</string>
         </property>
         <property name="text">
@@ -566,7 +566,7 @@
 
 #full_size_button:hover 
 {
-	background-color:rgb(124, 177, 255);
+	background-color:rgb(150, 0, 65);
 }</string>
         </property>
         <property name="text">
@@ -794,7 +794,7 @@
 
 #exit_button:hover 
 {
-	background-color:rgb(255, 100, 0);
+	background-color:rgb(205, 0, 0);
 }</string>
         </property>
         <property name="text">
@@ -832,35 +832,69 @@
     <item row="2" column="0">
      <layout class="QVBoxLayout" name="LeftMenu">
       <property name="spacing">
-       <number>40</number>
+       <number>0</number>
       </property>
       <property name="sizeConstraint">
        <enum>QLayout::SetMaximumSize</enum>
       </property>
       <property name="leftMargin">
-       <number>10</number>
+       <number>0</number>
       </property>
       <property name="topMargin">
        <number>0</number>
       </property>
       <property name="rightMargin">
-       <number>10</number>
+       <number>0</number>
       </property>
       <item>
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
+       <widget class="Line" name="line">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+        <property name="minimumSize">
          <size>
-          <width>20</width>
-          <height>20</height>
+          <width>90</width>
+          <height>1</height>
          </size>
         </property>
-       </spacer>
+        <property name="maximumSize">
+         <size>
+          <width>90</width>
+          <height>1</height>
+         </size>
+        </property>
+        <property name="palette">
+         <palette>
+          <active/>
+          <inactive/>
+          <disabled/>
+         </palette>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">#line
+{
+
+ border-style: groove none none none;
+ border-color:rgb(130, 0, 60);
+ border-width: 1px;
+}</string>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <property name="lineWidth">
+         <number>0</number>
+        </property>
+        <property name="midLineWidth">
+         <number>0</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="Library">
@@ -872,18 +906,34 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>70</width>
-          <height>70</height>
+          <width>90</width>
+          <height>120</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>70</width>
-          <height>70</height>
+          <width>90</width>
+          <height>120</height>
          </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">#Library
+{
+	border: none;
+	background:none;
+	background-repeat: none;
+}
+
+#Library:hover 
+{
+	background-color:rgb(159, 0, 69);
+}</string>
         </property>
         <property name="text">
          <string/>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -897,18 +947,34 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>70</width>
-          <height>70</height>
+          <width>90</width>
+          <height>120</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>70</width>
-          <height>70</height>
+          <width>90</width>
+          <height>120</height>
          </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">#Settings
+{
+	border-style: groove none none none;
+ 	border-color:rgb(130, 0, 60);
+ 	border-width: 1px;
+}
+
+#Settings:hover 
+{
+	background-color:rgb(159, 0, 69);
+}</string>
         </property>
         <property name="text">
          <string/>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -922,43 +988,35 @@
         </property>
         <property name="minimumSize">
          <size>
-          <width>70</width>
-          <height>70</height>
+          <width>90</width>
+          <height>120</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>70</width>
-          <height>70</height>
+          <width>90</width>
+          <height>120</height>
          </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">#Synchronization
+{
+
+	border-style: groove none groove none;
+ 	border-color:rgb(130, 0, 60);
+ 	border-width: 1px;
+}
+
+#Synchronization:hover 
+{
+	background-color:rgb(159, 0, 69);
+}</string>
         </property>
         <property name="text">
          <string/>
         </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="Logiut">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>70</width>
-          <height>70</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>70</width>
-          <height>70</height>
-         </size>
-        </property>
-        <property name="text">
-         <string/>
+        <property name="flat">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -974,6 +1032,47 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="Logout">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>90</width>
+          <height>90</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>90</width>
+          <height>90</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">#Logout
+{
+	border-style: groove none groove none;
+ 	border-color:rgb(130, 0, 60);
+ 	border-width: 1px;
+}
+
+#Logout:hover 
+{
+	background-color:rgb(159, 0, 69);
+}</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="flat">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -1000,34 +1099,88 @@
       <property name="palette">
        <palette>
         <active>
+         <colorrole role="Button">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
+           </color>
+          </brush>
+         </colorrole>
          <colorrole role="Base">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>255</red>
-            <green>179</green>
-            <blue>0</blue>
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Window">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
            </color>
           </brush>
          </colorrole>
         </active>
         <inactive>
+         <colorrole role="Button">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
+           </color>
+          </brush>
+         </colorrole>
          <colorrole role="Base">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>255</red>
-            <green>179</green>
-            <blue>0</blue>
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Window">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
            </color>
           </brush>
          </colorrole>
         </inactive>
         <disabled>
+         <colorrole role="Button">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
+           </color>
+          </brush>
+         </colorrole>
          <colorrole role="Base">
           <brush brushstyle="SolidPattern">
            <color alpha="255">
-            <red>255</red>
-            <green>170</green>
-            <blue>0</blue>
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Window">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>176</red>
+            <green>0</green>
+            <blue>70</blue>
            </color>
           </brush>
          </colorrole>
@@ -1038,10 +1191,10 @@
        <string notr="true">
 #Context 
 {
+background-color:rgb(176, 0, 70);
 border-style: groove none none groove;
- border-color: rgb(255, 162, 0);
+ border-color:rgb(130, 0, 60);
  border-width: 1px;
-
 
 }</string>
       </property>
@@ -1107,7 +1260,7 @@ border-style: groove none none groove;
   <tabstop>Library</tabstop>
   <tabstop>Settings</tabstop>
   <tabstop>Synchronization</tabstop>
-  <tabstop>Logiut</tabstop>
+  <tabstop>Logout</tabstop>
   <tabstop>Context</tabstop>
  </tabstops>
  <resources/>
