Added dialog class, dinamic library layout
Сделал класс цивильного диалогового окна
Сделал слой для динамического создания и добавления рандомных виджетов с
автоматической прокруткой
Добавлена верхняя панель в библиотеке (переделать к фигам)

--- a/parser-test/loginwindow.ui
+++ b/parser-test/loginwindow.ui
@@ -1154,6 +1154,9 @@
             <height>16777215</height>
            </size>
           </property>
+          <property name="layoutDirection">
+           <enum>Qt::LeftToRight</enum>
+          </property>
           <property name="styleSheet">
            <string notr="true">#Forgot
 {
